Fixed mobile buttons and logo alignment
Fixed mobile buttons and logo alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,10 @@ p {
   max-width: 860px;
   padding-left: 0;
   padding-right: 0; }
+  @media screen and (max-width: 1025px) {
+    .row {
+      padding-left: 20px;
+      padding-right: 20px; } }
   @media screen and (max-width: 767px) {
     .row {
       padding-left: 20px;
@@ -77,11 +81,19 @@ p {
   position: relative; }
 
 .hero-overlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.8)), color-stop(130%, rgba(255, 255, 255, 0)));
+  background: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0) 130%);
+  background: -moz-linear-gradient(bottom, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0) 130%);
+  background: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0) 130%);
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0) 130%);
   height: 100%;
   width: 100%;
   position: absolute;
   top: 0; }
+
+.hero-logo {
+  width: 100px;
+  padding-bottom: 30px; }
 
 .hero-row {
   display: -webkit-box;
@@ -120,6 +132,10 @@ p {
   padding-left: 0;
   padding-right: 0;
   z-index: 2; }
+  @media screen and (max-width: 1025px) {
+    .hero-content-wrapper {
+      padding-left: 20px;
+      padding-right: 20px; } }
   @media screen and (max-width: 767px) {
     .hero-content-wrapper {
       padding-left: 20px;
@@ -130,9 +146,51 @@ p {
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+     -moz-box-orient: horizontal;
+     -moz-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row; }
   .hero-btn-row .button-primary:first-child {
-    margin-right: 15px; }
+    margin-right: 15px;
+    -webkit-box-ordinal-group: 1;
+    -webkit-order: 0;
+       -moz-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    margin-bottom: 0; }
+  .hero-btn-row .button--ghost-white {
+    -webkit-box-ordinal-group: 1;
+    -webkit-order: 0;
+       -moz-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0; }
+  @media screen and (max-width: 767px) {
+    .hero-btn-row {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+         -moz-box-orient: vertical;
+         -moz-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+      .hero-btn-row .button-primary:first-child {
+        margin-right: 0;
+        -webkit-box-ordinal-group: 3;
+        -webkit-order: 2;
+           -moz-box-ordinal-group: 3;
+            -ms-flex-order: 2;
+                order: 2; }
+      .hero-btn-row .button--ghost-white {
+        -webkit-box-ordinal-group: 2;
+        -webkit-order: 1;
+           -moz-box-ordinal-group: 2;
+            -ms-flex-order: 1;
+                order: 1;
+        margin-top: 15px; } }
 
 footer {
   height: 100%;
