--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -31,10 +31,13 @@ $container-width-condensed: 700px;
 $grid-gutter-width: 40px;
 
 
+
 //Components 
 $features-width: 200px;
 $features-icon-width: 64px;
 $features-icon-height: $features-icon-width;
+$hero-logo-width: 100px;
+
 //Buttons
 $button-height: 44px;
 $button-width: 280px;
