--- a/sass/modules/_layout.scss
+++ b/sass/modules/_layout.scss
@@ -38,6 +38,12 @@
 	padding-left: 0;
 	padding-right: 0;
 
+
+	@media screen and (max-width: $media-tablet){
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
 	@media screen and (max-width: $media-mobile){
 		padding-left: 20px;
 		padding-right: 20px;
